--- a/views/admin.ejs
+++ b/views/admin.ejs
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Admin Page</title>
     <!-- <link rel = "stylesheet" href ="styles/asmin.css"></link> -->
-    
+    <link rel="shortcut icon" href="#">
     <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
@@ -46,6 +46,7 @@
       font-family: 'Times New Roman', Times, serif;
     }
 
+
     
     
 	</style>
@@ -59,7 +60,7 @@
             <!-- <button type = "" class="col-sm-3 btn btn-primary btn-lg options" onclick="showContent('button2')">Update Data</button> -->
             <!-- <button type = "button" class="col-sm-2 btn btn-primary btn-lg options" onclick="showContent('button3')">Update TA-Instructors</button> -->
             <div class="dropdown">
-              <button class=" btn btn-primary btn-lg options dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+              <button class=" col-sm-12 btn btn-primary btn-lg options dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 Update Data
               </button>
               <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
@@ -118,12 +119,12 @@
                   <td><%= record.typeofleave %></td>
                   <td><%= record.leavepurpose %></td>
                   <td><%= record.daysapplied %></td>
-                  <td><%= record.fromdate %></td>
+                  <td><%= record.fromdate%></td>
                   <td><%= record.todate %></td>
                   <td><%= record.natureofduty %></td>
                   <td><%= record.alternatestudrolno %></td>
                   <td><%= record.alternatestudname %></td>
-                  <td><%= record.alternatestudname %></td>
+                  <!-- <td><%= record.alternatestudname %></td> -->
                   <td><%= record.fa_approval %></td>  
                   <td><%= record.mentor_approval %></td>
                   <td><input type="checkbox" name = 'approve'>Approve</td>                      
@@ -150,22 +151,22 @@
         <div class="content" id="button3-content">
             <!-- <h2>Hello3</h2> -->
             <div class="formMain">
-            <form>
+            <form id = "holidays" method="post" action="/admin">
             <div class="form-group row">
               <label class=" col-sm-2 col-form-label">Holiday </label>    
               <div class="col-sm-8">
-                <input type="text" class="form-control" id="event" style="font-size: 15px;"">
+                <input type="text" class="form-control" id="event" style="font-size: 15px;" required>
               </div>
             </div>
             <div class="form-group row">
               <label for=" date-input" class="col-sm-2 col-form-label">Date </label>
               <div class="col-sm-8">
-                <input type="text" class="form-control" id="date-input" placeholder="DD/MM/YYYY" style="font-size: 15px;">
+                <input type="text" class="form-control" id="date-input" placeholder="DD/MM/YYYY" style="font-size: 15px;" required>
               </div>
             </div>
             <div class="form-group row">
               <label for=" inputDay" class="col-sm-2">Day </label>
-              <select id="day" class="form-control col-sm-8 " style="font-size: 15px;">
+              <select id="day" class="form-control col-sm-8 " style="font-size: 15px;height:fit-content">
                 <option selected>Choose Day</option>
                 <option>Sunday</option>
                 <option>Monday</option>
@@ -184,6 +185,12 @@
                 <option>Restricted</option>
               </select>
             </div>
+
+            <div class="form-group row" style="align-items: center; ">
+            <input type = "submit" class="col-sm-3 " id="submitBtn" style=" color:white; background-color: blue; border-radius: 4px; width: 100px; align-items: center; margin-left: 36%; " value= "Add Holiday"/>           
+            </div>
+            <p id = "onAdd" style="font-size: 12px; color: green; text-align: center; padding: 2px;"></p>
+
           </form>
         </div>
             <!-- Content for button 3 -->
@@ -219,12 +226,29 @@
 		}
 
 
-    function performAction(actionId){
-      if(actionid == '1')
-      {
+    // const form = document.querySelector('#holidays');
+    // const submitBtn = document.querySelector('#submitBtn');
+    // const eventInput = document.querySelector('#event');
+    // const dateInput = document.querySelector('#date-input');
+    // submitBtn.addEventListener('click', (event) => {
+    //   event.preventDefault();
+      
+      // Check if required fields are filled
+      // console.log(eventInput.value +" "+ dateInput.value);
+    //   if (eventInput.value && dateInput.value) {
+    //     form.submit(); // Submit the form
+    //   } else {
+    //     alert('Please fill in all required fields.'); // Show an error message
+    //   }
+    // });
 
-      }
-    }
+    // function added(){
+    //   document.getElementById("onAdd").innerHTML = "Added Successfully!! ";
+    //   setTimeout(()=>{
+    //     document.getElementById("onAdd").innerHTML = '';
+
+    //   },2000);
+    // }
 
 	</script>
 </body>
