handling diifferent actions for admin

--- a/views/AddFaculty.ejs
+++ b/views/AddFaculty.ejs
@@ -58,30 +58,21 @@ input[type=text], select {
   </style>
   <body>
   
-  <h3 style="text-align: center;">Delete Student From the Database</h3>
+  <h3 style="text-align: center;">Add Faculty to the Database</h3>
   <div class="alert alert-success">
   <%
   if(message.length > 0){
   %>
   <%= message %> <%}%> </div>
   <div>
-    <form action="/admin/addStudent" method = "post">
-      <label for="rollNo">Roll No* :</label>
-      <input type="text" id="rollNo" name="RollNo" required placeholder="Roll No..">
+    <form action="/admin/addFaculty" method = "post">
+      <label for="name">Name :</label>
+      <input type="text" id="instName" name="name" placeholder="Instructor Name..">
   
-      <label for="name">Name* :</label>
-      <input type="text" id="lname" name="name" required  placeholder="Name..">
+      <label for="email">Email* :</label>
+      <input type="text" id="instEmail" name="email" required  placeholder="Instructor's emailID..">
   
-      <label for="leaves">Leaves Alloted* :</label>
-      <input type="text" id="lname" name="leavesAlloted" required  placeholder="Leaves Alloted..">
-  
-      <label for="fa">Faculty Advisor's Name* :</label>
-      <input type="text" id="lname" name="FA" required  placeholder="FA..">
-  
-      <label for="pm">Project Mentor's Name* :</label>
-      <input type="text" id="lname" name="PM"  required placeholder="PM..">
-  
-      <input type="submit" value="Add Student">
+      <input type="submit" value="Add Faculty">
     </form>
   </div>
   
