--- a/views/admin.ejs
+++ b/views/admin.ejs
@@ -65,13 +65,14 @@
               </button>
               <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
                 <a class="dropdown-item" href="/admin/addStudent" >Add StudentData</a>
-                <a class="dropdown-item" href="#" >Delete StudentData</a>
-                <a class="dropdown-item" href="#" >Change FA</a>
-                <a class="dropdown-item" href="#" >Change Project Mentor</a>
-                <a class="dropdown-item" href="#" >Add TA</a>
-                <a class="dropdown-item" href="#" >Delete TA</a>          
-                <a class="dropdown-item" href="#" >Change Instructor</a>
-                <a class="dropdown-item" href="#" >Delete Faculty</a>
+                <a class="dropdown-item" href="/admin/deleteStudent" >Delete StudentData</a>
+                <a class="dropdown-item" href="/admin/changeFA" >Change FA</a>
+                <a class="dropdown-item" href="/admin/changeProjectMentor" >Change Project Mentor</a>
+                <a class="dropdown-item" href="/admin/addTA" >Add TA</a>
+                <a class="dropdown-item" href="/admin/deleteTA" >Delete TA</a>          
+                <a class="dropdown-item" href="/admin/changeInstructor" >Change Instructor</a>
+                <a class="dropdown-item" href="/admin/addFaculty" >Add Faculty</a>
+                <a class="dropdown-item" href="/admin/deleteFaculty" >Delete Faculty</a>
                 <a class="dropdown-item" href="#"></a>
               </div>
             </div>
