--- a/views/DeleteFaculty.ejs
+++ b/views/DeleteFaculty.ejs
@@ -58,30 +58,22 @@ input[type=text], select {
   </style>
   <body>
   
-  <h3 style="text-align: center;">Delete Student From the Database</h3>
+  <h3 style="text-align: center;">Deleting Faculty from the Database</h3>
   <div class="alert alert-success">
   <%
   if(message.length > 0){
   %>
   <%= message %> <%}%> </div>
   <div>
-    <form action="/admin/addStudent" method = "post">
-      <label for="rollNo">Roll No* :</label>
-      <input type="text" id="rollNo" name="RollNo" required placeholder="Roll No..">
-  
-      <label for="name">Name* :</label>
-      <input type="text" id="lname" name="name" required  placeholder="Name..">
-  
-      <label for="leaves">Leaves Alloted* :</label>
-      <input type="text" id="lname" name="leavesAlloted" required  placeholder="Leaves Alloted..">
-  
-      <label for="fa">Faculty Advisor's Name* :</label>
-      <input type="text" id="lname" name="FA" required  placeholder="FA..">
-  
-      <label for="pm">Project Mentor's Name* :</label>
-      <input type="text" id="lname" name="PM"  required placeholder="PM..">
-  
-      <input type="submit" value="Add Student">
+    <form action="/admin/deleteFaculty" method = "post">
+       
+      <label for="name">Name :</label>
+      <input type="text" id="name" name="name" placeholder="Name..">
+
+      <label for="email">Email ID* :</label>
+      <input type="text" id="emailInput" name="email" placeholder="Email.." required>
+
+      <input type="submit" value="Delete Faculty">
     </form>
   </div>
   
